<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kaya_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="stephen@redrocketcomputing.com">stephen</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>urdf</depend>
  <depend>ros2run</depend>
  <depend>ament_index_python</depend>
  <depend>kaya_description</depend>
  <depend>kaya_base</depend>
  <depend>kaya_state</depend>
  <depend>kaya_vision</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
