<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kaya_realsense</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="stephen@redrocketcomputing.com">stephen</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>git</build_depend>
  <build_depend>pkg-config</build_depend>
  <build_depend>libssl-dev</build_depend>
  <build_depend>libusb-1.0-0-dev</build_depend>
  <build_depend>libgtk-3-dev</build_depend>
  <build_depend>libglfw3-dev </build_depend>
  <build_depend>libgl1-mesa-dev</build_depend>
  <build_depend>libglu1-mesa-dev</build_depend>
    
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
