<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kaya_sound_core</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="stephen@redrocketcomputing.com">stephen</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>kaya_sound_interface</depend>
  <depend>libgstreamer1.0-dev</depend>
  <depend>libgstreamer-plugins-base1.0-dev</depend>
  <depend>gstreamer1.0</depend>
  <depend>gstreamer1.0-plugins-base</depend>
  <depend>gstreamer1.0-plugins-ugly</depend>
  <depend>gstreamer1.0-plugins-good</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
